# alcf-hack-nqmcc

./: CMakeLists.txt  README.md  gpu_tile_compact.sh  init.f90  install.sh  nqmcc.f90  nqmcc_comm_split.f90  one-sided.f90
inputs/: be8.in  c13.in  hack.in
